refactor: Simplify architecture and add design decisions documentation
- Consolidate 5 exceptions into 3 (EmployeeServiceException with HttpStatus)
- Remove hexagonal architecture indirection (merge Port/Adapter into Service)
- Add prominent Design Decisions section to README explaining choices
- Document known limitations and production considerations
- Update tests for simplified structure

Reduces complexity ~50% while maintaining retry logic, caching, and test coverage.